--- a/src/main/resources/META-INF/plugin.xml
+++ b/src/main/resources/META-INF/plugin.xml
@@ -22,7 +22,7 @@
     <actions>
         <action id="com.amount.intellij.GithubCopyAndOpenUrlForFile"
                 class="com.amount.intellij.GithubCopyAndOpenUrlForFile"
-                text="Copy url and open Github (master)"
+                text="Copy URL and Open Github (Master)"
                 description="Copy and open the URL to this file in Github, assuming the master branch">
             <add-to-group group-id="EditorPopupMenu"/>
             <add-to-group group-id="ProjectViewPopupMenu"/>
