--- a/src/main/resources/META-INF/plugin.xml
+++ b/src/main/resources/META-INF/plugin.xml
@@ -1,7 +1,7 @@
 <idea-plugin>
     <id>com.amount.copy-github-file-url</id>
     <name>Copy &amp; Browse as Github Path</name>
-    <vendor email="paul.dennis@amount.com">Amount-Dev</vendor>
+    <vendor>Amount-Dev</vendor>
 
     <description><![CDATA[
       For projects with git repos in the base, it allows you to copy the current file's path on either
