--- a/build.gradle
+++ b/build.gradle
@@ -35,11 +35,15 @@ patchPluginXml {
           <ul>
             <li>To copy the Github file URL only, right-click on the open file's tab or the file in the Project view</li> 
             <li>To copy the Github file URL with a single line selected in Github, right-click on the line</li> 
-            <li>To copy the Github file URL with a line range selected in Github, select the range and right-click on the range</li> 
+            <li>To copy the Github file URL with a line range selected in Github, select the entire range (caret will
+            be at the start of the next line) and right-click on the range </li> 
           </ul>
         </li>
         <li>
             Choose the option to Copy URL and open Github on either Master or Current Branch
+        </li>
+        <li>
+            The URL will be copied to your clipboard and automatically open in your default browser
         </li>
       </ol>
       """
